// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrateCalculatedMeasuresInDashboards removes definitions of calculated measures saved in ActiveUI 5.0 from the \`query.mdx\` of all widgets from a dashboard with a single page 1`] = `
Object {
  "filters": Array [],
  "pages": Object {
    "p-0": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [],
            "measures": Array [
              "[Measures].[Distinct count city]",
            ],
            "rows": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Distinct count city]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 1",
    },
  },
  "pagesOrder": Array [
    "p-0",
  ],
}
`;

exports[`migrateCalculatedMeasuresInDashboards removes definitions of calculated measures saved in ActiveUI 5.0 from the \`query.mdx\` of all widgets from a dashboard with a single page 2`] = `
Object {
  "filters": Array [],
  "pages": Object {
    "p-0": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[Log pv.SUM]",
            ],
            "rows": Array [
              "[Underlyings].[Products].[ProductType]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY {[Measures].[Log pv.SUM]} ON COLUMNS, NON EMPTY Hierarchize(Descendants({[Underlyings].[Products].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
        "1": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "secondaryValues": Array [],
            "splitBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[activeui5 calculated measure]",
            ],
            "verticalSubplots": Array [],
            "xAxis": Array [
              "[Currency].[Currency].[Currency]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Currency].[Currency].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[activeui5 calculated measure]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-line-chart",
        },
        "2": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "stackBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[contributors.COUNT]",
            ],
            "verticalSubplots": Array [],
            "xAxis": Array [
              "[Time].[HistoricalDates].[AsOfDate]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY [Time].[HistoricalDates].[AsOfDate].Members ON ROWS, NON EMPTY {[Measures].[contributors.COUNT]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-stacked-column-chart",
        },
        "3": Object {
          "mapping": Object {
            "axis": Array [
              "[Geography].[City].[City]",
            ],
            "horizontalSubplots": Array [],
            "splitBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[Distinct count city]",
              "[Measures].[contributors.COUNT]",
            ],
            "verticalSubplots": Array [],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Distinct count city], [Measures].[contributors.COUNT]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "switchedTo": "plotly-clustered-bar-chart",
          "widgetKey": "plotly-radar-chart",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "leafKey": "0",
                "size": 0.5,
              },
              Object {
                "leafKey": "2",
                "size": 0.5,
              },
            ],
            "direction": "column",
            "size": 0.5,
          },
          Object {
            "children": Array [
              Object {
                "leafKey": "1",
                "size": 0.5,
              },
              Object {
                "leafKey": "3",
                "size": 0.5,
              },
            ],
            "direction": "column",
            "size": 0.5,
          },
        ],
        "direction": "row",
      },
      "name": "Page 1",
    },
  },
  "pagesOrder": Array [
    "p-0",
  ],
}
`;

exports[`migrateCalculatedMeasuresInDashboards removes definitions of calculated measures saved in ActiveUI 5.0 from the \`query.mdx\` of all widgets from a dashboard with multiple pages 1`] = `
Object {
  "filters": Array [],
  "pages": Object {
    "p-0": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "secondaryValues": Array [],
            "splitBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[Distinct count city]",
            ],
            "verticalSubplots": Array [],
            "xAxis": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY {[Measures].[Distinct count city]} ON COLUMNS, NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-line-chart",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 1",
    },
    "p-1": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[Log pv.SUM]",
            ],
            "rows": Array [
              "[CounterParty].[CounterParty].[CounterPartyGroup]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[CounterParty].[CounterParty].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Log pv.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
        "1": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "stackBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[gamma.SUM]",
            ],
            "verticalSubplots": Array [],
            "xAxis": Array [
              "[Booking].[Desk].[LegalEntity]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Booking].[Desk].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[gamma.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-stacked-column-chart",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 0.5,
          },
          Object {
            "leafKey": "1",
            "size": 0.5,
          },
        ],
        "direction": "row",
      },
      "name": "Page 2",
    },
    "p-2": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[pvSum ^ 2]",
            ],
            "rows": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[pvSum ^ 2]} ON COLUMNS FROM [EquityDerivativesCubeDist] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 5.11",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 3",
    },
    "p-3": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [],
            "measures": Array [
              "[Measures].[EXP pnl.Forex]",
            ],
            "rows": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[EXP pnl.Forex]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 4",
    },
  },
  "pagesOrder": Array [
    "p-0",
    "p-1",
    "p-2",
    "p-3",
  ],
}
`;

exports[`migrateCalculatedMeasuresInDashboards removes definitions of calculated measures saved in ActiveUI 5.0 from the \`query.mdx\` of all widgets from a dashboard with multiple pages inside a folder 1`] = `
Object {
  "filters": Array [],
  "pages": Object {
    "p-0": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[Test calculated measure]",
            ],
            "rows": Array [
              "[Geography].[City].[City]",
              "[Currency].[Currency].[Currency]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Crossjoin(Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)), Hierarchize(Descendants({[Currency].[Currency].[AllMember]}, 1, SELF_AND_BEFORE))) ON ROWS, NON EMPTY {[Measures].[Test calculated measure]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 1",
    },
    "p-1": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[pvSum ^ 2]",
            ],
            "rows": Array [
              "[Underlyings].[Products].[ProductType]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Underlyings].[Products].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[pvSum ^ 2]} ON COLUMNS FROM [EquityDerivativesCubeDist] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 5.11",
          "widgetKey": "pivot-table",
        },
        "1": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[pvSum ^ 2]",
            ],
            "rows": Array [
              "[Underlyings].[Products].[ProductType]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Underlyings].[Products].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[pvSum ^ 2]} ON COLUMNS FROM [EquityDerivativesCubeDist] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 5.11",
          "switchedTo": "kpi",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "leafKey": "0",
            "size": 0.5,
          },
          Object {
            "leafKey": "1",
            "size": 0.5,
          },
        ],
        "direction": "row",
      },
      "name": "Page 2",
    },
    "p-2": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[Log pv.SUM]",
            ],
            "rows": Array [
              "[Booking].[Desk].[LegalEntity]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[Booking].[Desk].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Log pv.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
        "1": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[pvSum ^ 2]",
            ],
            "rows": Array [
              "[Underlyings].[Underlyings].[UnderlierType]",
            ],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY {[Measures].[pvSum ^ 2]} ON COLUMNS, NON EMPTY Hierarchize(Descendants({[Underlyings].[Underlyings].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS FROM [EquityDerivativesCubeDist] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 5.11",
          "widgetKey": "pivot-table",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "leafKey": "0",
                "size": 0.5,
              },
              Object {
                "leafKey": "1",
                "size": 0.5,
              },
            ],
            "direction": "column",
            "size": 1,
          },
        ],
        "direction": "row",
      },
      "name": "Page 3",
    },
  },
  "pagesOrder": Array [
    "p-0",
    "p-1",
    "p-2",
  ],
}
`;

exports[`migrateCalculatedMeasuresInDashboards removes definitions of calculated measures saved in ActiveUI 5.0 from the \`query.mdx\` of widgets if their names are included in \`calculatedMeasureNames\` and does not remove them if they are not 1`] = `
Object {
  "filters": Array [],
  "pages": Object {
    "p-0": Object {
      "content": Object {
        "0": Object {
          "mapping": Object {
            "columns": Array [
              "ALL_MEASURES",
            ],
            "measures": Array [
              "[Measures].[Log City]",
              "[Measures].[delta.SUM]",
            ],
            "rows": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "WITH  Member [Measures].[Log City] AS Log([Geography].[City], 10), FORMAT_STRING = \\"#,###.##\\"  SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Log City], [Measures].[delta.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "pivot-table",
        },
        "1": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "stackBy": Array [
              "ALL_MEASURES",
            ],
            "values": Array [
              "[Measures].[Log City]",
              "[Measures].[delta.SUM]",
              "[Measures].[Log pv.SUM]",
            ],
            "verticalSubplots": Array [],
            "xAxis": Array [
              "[Geography].[City].[City]",
            ],
          },
          "query": Object {
            "mdx": "WITH  Member [Measures].[Log City] AS Log([Geography].[City], 10), FORMAT_STRING = \\"#,###.##\\"  SELECT NON EMPTY Hierarchize(Descendants({[Geography].[City].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Log City], [Measures].[delta.SUM], [Measures].[Log pv.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-stacked-column-chart",
        },
        "2": Object {
          "mapping": Object {
            "horizontalSubplots": Array [],
            "sliceBy": Array [
              "[CounterParty].[CounterParty].[CounterPartyGroup]",
            ],
            "values": Array [
              "[Measures].[Log pv.SUM]",
            ],
            "verticalSubplots": Array [],
          },
          "query": Object {
            "mdx": "SELECT NON EMPTY Hierarchize(Descendants({[CounterParty].[CounterParty].[AllMember]}, 1, SELF_AND_BEFORE)) ON ROWS, NON EMPTY {[Measures].[Log pv.SUM]} ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS",
            "updateMode": "once",
          },
          "serverKey": "Ranch 6.0",
          "widgetKey": "plotly-pie-chart",
        },
      },
      "layout": Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "leafKey": "0",
                "size": 0.5,
              },
              Object {
                "leafKey": "2",
                "size": 0.5,
              },
            ],
            "direction": "column",
            "size": 0.5,
          },
          Object {
            "leafKey": "1",
            "size": 0.5,
          },
        ],
        "direction": "row",
      },
      "name": "Page 1",
    },
  },
  "pagesOrder": Array [
    "p-0",
  ],
}
`;
